add RBAC for user API