@@ -2,15 +2,18 @@ package com.skthvl.cinemetrics.util;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.security.MessageDigest;
+import java.util.Objects;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public class FileUtil {
   public static String calculateChecksum(final String filePath, final String algorithm) {
     try {
-      Path path = Path.of(ClassLoader.getSystemResource(filePath).toURI());
+      final var classLoader = FileUtil.class.getClassLoader();
+      Path path = Paths.get(Objects.requireNonNull(classLoader.getResource(filePath)).toURI());
       MessageDigest digest = MessageDigest.getInstance(algorithm);
 
       final var inputStream = Files.newInputStream(path, StandardOpenOption.READ);
